--- a/metadata.yaml
+++ b/metadata.yaml
@@ -39,5 +39,6 @@ subjects:
 - !lcsh 'Great Britain -- History -- Henry IV, 1399-1413 -- Drama'
 - !lcsh 'Henry IV, King of England, 1367-1413 -- Drama'
 - !lcc 'PR'
+- GITenberg
 title: Kuningas Henrik Neljäs I
 url: http://www.gutenberg.org/ebooks/39557
